Wed Jul 12 17:19:25 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test_msetzeroitems1 to apitest, to check that statistics are
	  correctly returned when an empty mset is requested.

Wed Jul 12 17:05:26 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added much debugging information to weight calculation, and 
	  term frequency and weight stuff now appears to work.

Wed Jul 12 14:38:43 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More work on returning term frequency and weight information.
	  Should now return correct term frequency, but all weights appear
	  to be 0. :(

Tue Jul 11 18:35:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More work on returning term frequency and weight information.
	  Might even work now.

Tue Jul 11 13:04:00 BST 2000 Olly Betts

	* Changed various OmStem methods to take "const string &" instead of
	  "string"

Tue Jul 11 12:56:57 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Restored automake dependency checking for C files.

Tue Jul 11 12:54:15 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test to apitest to check the get_term{freq,weight} methods
	  of OmMSet.  Currently fails, since these are unimplemented. 

Tue Jul 11 11:37:00 BST 2000 Olly Betts

	* Added threadtest to .cvsignore

Tue Jul 11 11:04:00 BST 2000 Olly Betts

	* Added TODO for get_position_list() method on operators

Mon Jul 10 19:12:08 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More Solaris portability fixes.

Mon Jul 10 18:35:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added Norwegian stemming algorithm, and linked it into the build
	  system.

Mon Jul 10 18:19:28 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add an internal interface to OmMSet, to allow access to the
	  term frequency and weight information internally for setting it.